:warning: Fact sources (#298)
Adds support for qualifying Facts by source. Like Tags, user-created
Facts have a source of `""`.

* The `facts` map has been removed from the `Application` REST resource.
Facts must be accessed through the subresource endpoints.
* `/applications/:id/facts` by default lists facts from all sources, but
can be limited to a facts from a single source with the query parameter.
To limit it to user Facts, pass an empty value: `?source=`.
* Getting, creating, updating, and deleting single facts now takes a
wildcard path parameter for the source.
`/applications/:id/facts/:key/*source`
* It is now possible to replace all Facts for a source by PUT-ing a list
of Fact objects to `/applications/:id/facts` with the parameter set.
User facts cannot be replaced in this way.
* The `AppFacts` collection in the Addon binding has gained a `Source`
method to mirror the `AppTags` collection.

Implements https://github.com/konveyor/tackle2-hub/issues/295

---------
