# api/application.go
@@ -18,7 +18,7 @@ const (
 	ApplicationTagsRoot  = ApplicationRoot + "/tags"
 	ApplicationTagRoot   = ApplicationTagsRoot + "/:" + ID2
 	ApplicationFactsRoot = ApplicationRoot + "/facts"
-	ApplicationFactRoot  = ApplicationFactsRoot + "/:" + Key
+	ApplicationFactRoot  = ApplicationFactsRoot + "/:" + Key + "/*" + Source
 	AppBucketRoot        = ApplicationRoot + "/bucket"
 	AppBucketContentRoot = AppBucketRoot + "/*" + Wildcard
 	AppStakeholdersRoot  = ApplicationRoot + "/stakeholders"
@@ -61,10 +61,11 @@ func (h ApplicationHandler) AddRoutes(e *gin.Engine) {
 	routeGroup.Use(Required("applications.facts"))
 	routeGroup.GET(ApplicationFactsRoot, h.FactList)
 	routeGroup.GET(ApplicationFactsRoot+"/", h.FactList)
+	routeGroup.POST(ApplicationFactsRoot, h.FactCreate)
 	routeGroup.GET(ApplicationFactRoot, h.FactGet)
-	routeGroup.POST(ApplicationFactRoot, h.FactCreate)
 	routeGroup.PUT(ApplicationFactRoot, h.FactPut)
 	routeGroup.DELETE(ApplicationFactRoot, h.FactDelete)
+	routeGroup.PUT(ApplicationFactsRoot, h.FactReplace, Transaction)
 	// Bucket
 	routeGroup = e.Group("/")
 	routeGroup.Use(Required("applications.bucket"))
@@ -273,15 +274,6 @@ func (h ApplicationHandler) Update(ctx *gin.Context) {
 		_ = ctx.Error(result.Error)
 		return
 	}
-	for _, fact := range m.Facts {
-		if _, found := r.Facts[fact.Key]; !found {
-			h.DB(ctx).Delete(fact)
-			if err != nil {
-				_ = ctx.Error(err)
-				return
-			}
-		}
-	}
 	//
 	// Update the application.
 	m = r.Model()
@@ -302,27 +294,10 @@ func (h ApplicationHandler) Update(ctx *gin.Context) {
 		return
 	}
 	db = h.DB(ctx).Model(m)
-	err = db.Association("Facts").Replace(m.Facts)
-	if err != nil {
-		_ = ctx.Error(err)
-		return
-	}
-	db = h.DB(ctx).Model(m)
 	err = db.Association("Contributors").Replace(m.Contributors)
 	if err != nil {
 		_ = ctx.Error(err)
 		return
-	}
-	//
-	// Update facts.
-	for _, m := range m.Facts {
-		db = h.DB(ctx).Model(&model.Fact{})
-		db = db.Where("ApplicationID = ? AND Key = ?", m.ApplicationID, m.Key)
-		err := db.Updates(h.fields(m)).Error
-		if err != nil {
-			_ = ctx.Error(err)
-			return
-		}
 	}
 
 	// delete existing tag associations and create new ones
@@ -583,12 +558,14 @@ func (h ApplicationHandler) TagDelete(ctx *gin.Context) {
 
 // FactList godoc
 // @summary List facts.
-// @description List facts.
+// @description List facts. Can be filtered by source.
+// @description By default facts from all sources are returned.
 // @tags applications
 // @produce json
 // @success 200 {object} []api.Fact
 // @router /applications/{id}/facts [get]
 // @param id path string true "Application ID"
+// @param source query string false "Fact source"
 func (h ApplicationHandler) FactList(ctx *gin.Context) {
 	id := h.pk(ctx)
 	app := &model.Application{}
@@ -597,11 +574,17 @@ func (h ApplicationHandler) FactList(ctx *gin.Context) {
 		_ = ctx.Error(result.Error)
 		return
 	}
-	db := h.DB(ctx).Model(app).Association("Facts")
+
+	db := h.DB(ctx)
+	source, found := ctx.GetQuery(Source)
+	if found {
+		condition := h.DB(ctx).Where("source = ?", source)
+		db = db.Where(condition)
+	}
 	list := []model.Fact{}
-	err := db.Find(&list)
-	if err != nil {
-		_ = ctx.Error(err)
+	result = db.Find(&list, "ApplicationID = ?", id)
+	if result.Error != nil {
+		_ = ctx.Error(result.Error)
 		return
 	}
 	resources := []Fact{}
@@ -619,9 +602,10 @@ func (h ApplicationHandler) FactList(ctx *gin.Context) {
 // @tags applications
 // @produce json
 // @success 200 {object} api.Fact
-// @router /applications/{id}/facts/{name} [get]
+// @router /applications/{id}/facts/{name}/{source} [get]
 // @param id path string true "Application ID"
 // @param key path string true "Fact key"
+// @param source path string true "Fact source"
 func (h ApplicationHandler) FactGet(ctx *gin.Context) {
 	id := h.pk(ctx)
 	app := &model.Application{}
@@ -631,8 +615,9 @@ func (h ApplicationHandler) FactGet(ctx *gin.Context) {
 		return
 	}
 	key := ctx.Param(Key)
+	source := ctx.Param(Source)[1:]
 	list := []model.Fact{}
-	result = h.DB(ctx).Find(&list, "ApplicationID = ? AND Key = ?", id, key)
+	result = h.DB(ctx).Find(&list, "ApplicationID = ? AND Key = ? AND source = ?", id, key, source)
 	if result.Error != nil {
 		_ = ctx.Error(result.Error)
 		return
@@ -653,14 +638,13 @@ func (h ApplicationHandler) FactGet(ctx *gin.Context) {
 // @accept json
 // @produce json
 // @success 201
-// @router /applications/{id}/facts/{key} [post]
+// @router /applications/{id}/facts [post]
 // @param id path string true "Application ID"
-// @param key path string true "Fact key"
 // @param fact body api.Fact true "Fact data"
 func (h ApplicationHandler) FactCreate(ctx *gin.Context) {
 	id := h.pk(ctx)
-	var v interface{}
-	err := h.Bind(ctx, &v)
+	r := &Fact{}
+	err := h.Bind(ctx, r)
 	if err != nil {
 		_ = ctx.Error(err)
 		return
@@ -671,18 +655,15 @@ func (h ApplicationHandler) FactCreate(ctx *gin.Context) {
 		_ = ctx.Error(result.Error)
 		return
 	}
-	key := ctx.Param(Key)
-	m := &model.Fact{}
-	m.Key = key
-	m.Value, _ = json.Marshal(v)
+
+	m := r.Model()
 	m.ApplicationID = id
 	result = h.DB(ctx).Create(m)
 	if result.Error != nil {
 		_ = ctx.Error(result.Error)
 		return
 	}
-	r := &Fact{}
-	r.With(m)
+
 	h.Render(ctx, http.StatusCreated, r)
 }
 
@@ -696,11 +677,12 @@ func (h ApplicationHandler) FactCreate(ctx *gin.Context) {
 // @router /applications/{id}/facts/{key} [put]
 // @param id path string true "Application ID"
 // @param key path string true "Fact key"
+// @param source path string true "Fact source"
 // @param fact body api.Fact true "Fact data"
 func (h ApplicationHandler) FactPut(ctx *gin.Context) {
 	id := h.pk(ctx)
-	var v interface{}
-	err := h.Bind(ctx, &v)
+	r := &Fact{}
+	err := h.Bind(ctx, &r)
 	if err != nil {
 		_ = ctx.Error(err)
 		return
@@ -711,13 +693,16 @@ func (h ApplicationHandler) FactPut(ctx *gin.Context) {
 		_ = ctx.Error(result.Error)
 		return
 	}
+
 	key := ctx.Param(Key)
-	m := &model.Fact{}
-	result = h.DB(ctx).First(m, "ApplicationID = ? AND Key = ?", id, key)
+	source := ctx.Param(Source)[1:]
+	value, _ := json.Marshal(r.Value)
+	result = h.DB(ctx).First(&model.Fact{}, "ApplicationID = ? AND Key = ? AND source = ?", id, key, source)
 	if result.Error == nil {
-		m.Value, _ = json.Marshal(v)
-		db := h.DB(ctx).Model(m)
-		result = db.Updates(h.fields(m))
+		result = h.DB(ctx).
+			Model(&model.Fact{}).
+			Where("ApplicationID = ? AND Key = ? AND source = ?", id, key, source).
+			Update("Value", value)
 		if result.Error != nil {
 			_ = ctx.Error(result.Error)
 			return
@@ -726,9 +711,12 @@ func (h ApplicationHandler) FactPut(ctx *gin.Context) {
 		return
 	}
 	if errors.Is(result.Error, gorm.ErrRecordNotFound) {
-		m.Key = key
-		m.Value, _ = json.Marshal(v)
-		m.ApplicationID = id
+		m := &model.Fact{
+			Key:           Key,
+			Source:        source,
+			ApplicationID: id,
+			Value:         value,
+		}
 		result = h.DB(ctx).Create(m)
 		if result.Error != nil {
 			_ = ctx.Error(result.Error)
@@ -745,9 +733,10 @@ func (h ApplicationHandler) FactPut(ctx *gin.Context) {
 // @description Delete a fact.
 // @tags applications
 // @success 204
-// @router /applications/{id}/facts/{key} [delete]
+// @router /applications/{id}/facts/{key}/{source} [delete]
 // @param id path string true "Application ID"
 // @param key path string true "Fact key"
+// @param source path string true "Fact source"
 func (h ApplicationHandler) FactDelete(ctx *gin.Context) {
 	id := h.pk(ctx)
 	app := &model.Application{}
@@ -758,10 +747,70 @@ func (h ApplicationHandler) FactDelete(ctx *gin.Context) {
 	}
 	fact := &model.Fact{}
 	key := ctx.Param(Key)
-	result = h.DB(ctx).Delete(fact, "ApplicationID = ? AND Key = ?", id, key)
+	source := ctx.Param(Source)[1:]
+	result = h.DB(ctx).Delete(fact, "ApplicationID = ? AND Key = ? AND source = ?", id, key, source)
 	if result.Error != nil {
 		_ = ctx.Error(result.Error)
 		return
+	}
+
+	ctx.Status(http.StatusNoContent)
+}
+
+// FactReplace godoc
+// @summary Replace all facts from a source.
+// @description Replace all facts from a source.
+// @tags applications
+// @success 204
+// @router /applications/{id}/facts [put]
+// @param id path string true "Application ID"
+// @param source query string true "Source"
+func (h ApplicationHandler) FactReplace(ctx *gin.Context) {
+	source := ctx.Query(Source)
+	if source == "" {
+		_ = ctx.Error(&BadRequestError{Reason: "`source` query parameter is required"})
+		return
+	}
+	facts := []Fact{}
+	err := h.Bind(ctx, &facts)
+	if err != nil {
+		_ = ctx.Error(err)
+		return
+	}
+
+	id := h.pk(ctx)
+	app := &model.Application{}
+	result := h.DB(ctx).First(app, id)
+	if result.Error != nil {
+		_ = ctx.Error(result.Error)
+		return
+	}
+
+	// remove all the existing Facts for that source and app id.
+	db := h.DB(ctx).Where("ApplicationID = ?", id).Where("source = ?", source)
+	err = db.Delete(&model.Fact{}).Error
+	if err != nil {
+		_ = ctx.Error(err)
+		return
+	}
+
+	// create new Facts
+	if len(facts) > 0 {
+		newFacts := []model.Fact{}
+		for _, f := range facts {
+			value, _ := json.Marshal(f.Value)
+			newFacts = append(newFacts, model.Fact{
+				ApplicationID: id,
+				Key:           f.Key,
+				Value:         value,
+				Source:        source,
+			})
+		}
+		err = db.Create(&newFacts).Error
+		if err != nil {
+			_ = ctx.Error(err)
+			return
+		}
 	}
 
 	ctx.Status(http.StatusNoContent)
@@ -817,7 +866,6 @@ type Application struct {
 	Bucket          *Ref        `json:"bucket"`
 	Repository      *Repository `json:"repository"`
 	Binary          string      `json:"binary"`
-	Facts           FactMap     `json:"facts"`
 	Review          *Ref        `json:"review"`
 	Comments        string      `json:"comments"`
 	Identities      []Ref       `json:"identities"`
@@ -838,12 +886,6 @@ func (r *Application) With(m *model.Application, tags []model.ApplicationTag) {
 	r.Comments = m.Comments
 	r.Binary = m.Binary
 	_ = json.Unmarshal(m.Repository, &r.Repository)
-	r.Facts = FactMap{}
-	for i := range m.Facts {
-		f := Fact{}
-		f.With(&m.Facts[i])
-		r.Facts[f.Key] = f.Value
-	}
 	if m.Review != nil {
 		ref := &Ref{}
 		ref.With(m.Review.ID, "")
@@ -890,11 +932,6 @@ func (r *Application) Model() (m *model.Application) {
 	}
 	if r.BusinessService != nil {
 		m.BusinessServiceID = &r.BusinessService.ID
-	}
-	m.Facts = []model.Fact{}
-	for k, v := range r.Facts {
-		f := Fact{Key: k, Value: v}
-		m.Facts = append(m.Facts, *f.Model())
 	}
 	for _, ref := range r.Identities {
 		m.Identities = append(
@@ -944,24 +981,23 @@ type Repository struct {
 }
 
 //
-// FactMap REST nested resource.
-type FactMap map[string]interface{}
-
-//
 // Fact REST nested resource.
 type Fact struct {
-	Key   string      `json:"key"`
-	Value interface{} `json:"value"`
+	Key    string      `json:"key"`
+	Value  interface{} `json:"value"`
+	Source string      `json:"source"`
 }
 
 func (r *Fact) With(m *model.Fact) {
 	r.Key = m.Key
+	r.Source = m.Source
 	_ = json.Unmarshal(m.Value, &r.Value)
 }
 
 func (r *Fact) Model() (m *model.Fact) {
 	m = &model.Fact{}
 	m.Key = r.Key
+	m.Source = r.Source
 	m.Value, _ = json.Marshal(r.Value)
 	return
 }
