# docs/swagger.json
@@ -331,7 +331,7 @@
         },
         "/applications/{id}/facts": {
             "get": {
-                "description": "List facts.",
+                "description": "List facts. Can be filtered by source.\nBy default facts from all sources are returned.",
                 "produces": [
                     "application/json"
                 ],
@@ -346,6 +346,12 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Fact source",
+                        "name": "source",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -357,6 +363,70 @@
                                 "$ref": "#/definitions/api.Fact"
                             }
                         }
+                    }
+                }
+            },
+            "put": {
+                "description": "Replace all facts from a source.",
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Replace all facts from a source.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Source",
+                        "name": "source",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a fact.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Create a fact.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Fact data",
+                        "name": "fact",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Fact"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     }
                 }
             }
@@ -390,6 +460,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Fact source",
+                        "name": "source",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Fact data",
                         "name": "fact",
                         "in": "body",
@@ -402,49 +479,6 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a fact.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "applications"
-                ],
-                "summary": "Create a fact.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Application ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Fact key",
-                        "name": "key",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Fact data",
-                        "name": "fact",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.Fact"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
                     }
                 }
             },
@@ -468,6 +502,13 @@
                         "name": "key",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Fact source",
+                        "name": "source",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -477,7 +518,7 @@
                 }
             }
         },
-        "/applications/{id}/facts/{name}": {
+        "/applications/{id}/facts/{name}/{source}": {
             "get": {
                 "description": "Get fact by name.",
                 "produces": [
@@ -499,6 +540,13 @@
                         "type": "string",
                         "description": "Fact key",
                         "name": "key",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Fact source",
+                        "name": "source",
                         "in": "path",
                         "required": true
                     }
@@ -4002,9 +4050,6 @@
                 "description": {
                     "type": "string"
                 },
-                "facts": {
-                    "$ref": "#/definitions/api.FactMap"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -4159,12 +4204,11 @@
                 "key": {
                     "type": "string"
                 },
+                "source": {
+                    "type": "string"
+                },
                 "value": {}
             }
-        },
-        "api.FactMap": {
-            "type": "object",
-            "additionalProperties": true
         },
         "api.Fields": {
             "type": "object",
